--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MasterOf-None/statics_package.git"
+    "url": "git+https://github.com/MasterOf-None/statics_package.git"
   },
   "keywords": [],
   "author": "MasterOf-None",
